fix: Center byline for small quote on mobile

--- a/scss/components/_small-quote.scss
+++ b/scss/components/_small-quote.scss
@@ -43,8 +43,10 @@
 .vf-small-quote-byline {
   text-align: left;
   margin-bottom: $spacing-md;
+  text-align: center;
 
   @include media-breakpoint-up(sm) {
+    text-align: left;
     float: left;
     width: 168px;
     margin-right: $spacing-md;
@@ -54,6 +56,7 @@
   margin: 0 auto;
   padding: 0;
   width: 45%;
+  display: block;
   @include media-breakpoint-up(sm) {
     width: 100%;
   }
@@ -67,7 +70,7 @@
 .vf-small-quote-byline-description {
   @include typo-paragraph-secondary-mobile();
   color: $vattenfall-blue-grey;
-  padding: 0 100px;
+  padding: 0 50px;
   @include media-breakpoint-up(sm) {
     padding: 0;
   }
